--- a/upnote/package.json
+++ b/upnote/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.0",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
   },
@@ -36,6 +38,9 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-react-app": "^7.0.1"
+    "autoprefixer": "^10.4.16",
+    "eslint-config-react-app": "^7.0.1",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1"
   }
 }
